# aas-rail

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
.devcontainer/: devcontainer.json
.github/workflows/: ci.yml
examples/streamlit-web-ui/: README.md  app.py  utils.py
examples/streamlit-web-ui/tabs/: __init__.py  icl_database.py  icl_query.py  inferencing.py  upload.py
notebooks/aasx_urls/: icl_product_urls.txt
src/aas_rail/: __init__.py
src/aas_rail/experiments/: expand_matrix_cfg.py  run_inference.py  test_config.yaml
src/aas_rail/experiments/configs/: __init__.py
src/aas_rail/experiments/configs/architecture_optimization/: __init__.py  batch_size.yaml
src/aas_rail/langgraphs/: generic_pipeline.py  node_services.py
src/aas_rail/langgraphs/icl/: extraction_helper_models.py  extraction_helper_pipeline.py  icl_database_creation.py  rdf_export.py  rdf_extraction_helper.py  rdf_property_grouping.py  rdf_serialization.py
src/aas_rail/model_clients/: client_configs.py  llm_clients.py
src/aas_rail/prompts/: prompt_registry.py
src/aas_rail/prompts/rag_ie/: retrieve.jsonl  schema_based_extraction.jsonl
src/aas_rail/schemata/rag_schemata/: rag_retrieve_schema.py
src/aas_rail/utils/: utils.py
src/schema_based_ie/experiments/: default_config.yaml  expand_matrix_cfg.py  run_inference.py
src/schema_based_ie/experiments/configs/: default_config.yaml
src/schema_based_ie/langgraphs/: generic_pipeline.py  node_services.py  text_perturbation.py
src/schema_based_ie/langgraphs/icl/: __init__.py  aasx_io.py  extraction_helper_pipeline.py  icl_database_creation.py  neo4j_connection.py  rdf_queries.py
src/schema_based_ie/model_clients/: llm_clients.py
src/schema_based_ie/prompts/: prompt_registry.py
src/schema_based_ie/prompts/rag_ie/: __init__.py
src/schema_based_ie/schemata/ie_schemata/: aas_ie.py
src/schema_based_ie/utils/: __init__.py  utils.py
tests/: test_generic_pipeline_icl.py  test_icl_core.py  test_llm_usage.py  test_schema_registry.py
(+8 files in other folders)
