[build-system]
requires = ["setuptools>=77", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "aas-rail"
version = "0.0.0"
description = "Asset Administration Shell Retrieval-Augmented In-context Learning for Information Extraction"
authors = [
    { name="Janek Groß", email="janek.gross@hs-mainz.de" }
]
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
license-files = ["LICENSE"]
dependencies = [
    "anthropic>=0.117,<1",
    "basyx-python-sdk>=2,<3",
    "chromadb>=1.3,<2",
    "google-genai>=1.58,<2",
    "langchain>=1.2,<2",
    "langchain-text-splitters>=1,<2",
    "langgraph>=1,<2",
    "neo4j>=5,<7",
    "numpy>=1.26,<3",
    "openai>=2.9,<3",
    "pydantic>=2.10,<3",
    "pypdfium2>=5.1,<6",
    "PyYAML>=6,<7",
    "rdflib>=7.6,<8",
    "sentence-transformers>=5.1,<6",
    "voyageai>=0.3,<1",
]

[project.optional-dependencies]
app = [
    "streamlit[pdf]>=1.57,<2",
]
perturbation = [
    "nltk>=3.9,<4",
    "spacy>=3.8,<4",
]
dev = [
    "ipykernel>=7,<8",
    "pytest>=8,<10",
    "ruff>=0.12,<1",
]

[project.urls]
Repository = "https://github.com/janek-gross/aas-rail"
Issues = "https://github.com/janek-gross/aas-rail/issues"

[tool.setuptools.packages.find]
where = ["src"]
include = ["schema_based_ie*"]
namespaces = false

[tool.setuptools.package-data]
"schema_based_ie.prompts" = ["rag_ie/*.jsonl"]
"schema_based_ie.experiments" = ["*.yaml", "configs/*.yaml", "configs/*/*.yaml"]
